# c-rest-postgres-gnutls-api

./: .gitignore  CMakeLists.txt  Makefile  README.md
docker/: db-init.sh  docker-compose.yml
migrations/: 000_create_sample_data.sql  001_create_camera_metadata.sql  002_add_index_on_cam_id.sql
src/: camera_handler.c  camera_handler.h  camera_metadata.h  camera_repository.c  camera_repository.h  camera_service.c  camera_service.h  data_handler.c  data_handler.h  data_repository.c  data_repository.h  data_service.c  data_service.h  db_connection.c  db_connection.h  dotenv.c  dotenv.h  http_response.h  json_parser.c  json_parser.h  main.c  migration_manager.c  migration_manager.h  server.c  server.h
test/: test_camera_handler.c  test_data_repository.c  test_db_connection.c  test_dotenv.c  test_json_parser.c  test_main.c  test_migration_manager.c
